<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:layout_alignParentEnd="true"
    android:layout_alignParentBottom="true"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".vue.TransfertActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_weight="0.5"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgTransfertReturn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:contentDescription="@string/icone_transfert"
                android:src="@drawable/transfert"
                app:srcCompat="@drawable/transfert" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtTitleEtape"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:gravity="start|center"
                android:lines="1"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/title_transfert"
                android:textColor="@color/colorPrimaryDark" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="0.4"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lblTransfertLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:text="@string/login" />

        <EditText
            android:id="@+id/txtTransfertLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:ems="10"
            android:gravity="center_horizontal|center_vertical"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/lblTransfertMdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:text="@string/password" />

        <EditText
            android:id="@+id/txtTransfertMdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:ems="10"
            android:gravity="center_horizontal|center_vertical"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/transfertText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="Patientez pendant le transfert de données..."
            android:textAlignment="center"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/transfertAttente"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:visibility="invisible"
            app:srcCompat="@drawable/attente" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:baselineAligned="false"
        android:gravity="center">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:orientation="vertical"
        android:paddingTop="20dp">

        <Button
            android:id="@+id/cmdAuthentValider"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/valider" />

    </LinearLayout>
</LinearLayout>
